--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -177,7 +177,7 @@ input, textarea, select, .uneditable-input {
 .users {
   list-style: none;
   margin: 0;
-  line-break: {
+  li {
     overflow: auto;
     padding: 10px 0;
     border-top: 1px solid $grayLighter;
