--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+
 <% provide(:title, @user.name) %>
 <div class="row">
   <aside class="span4">
@@ -6,6 +7,23 @@
         <%= gravatar_for @user %>
         <%= @user.name %>
       </h1>
+
+      <span><%= pluralize(@user.microposts.count, "micropost") %></span>
+
+
     </section>
+
+
+
   </aside>
+  <div class="span8">
+    <% if @user.microposts.any? %>
+    <h3>Microposts (<%= @user.microposts.count %>)</h3>
+        <ol class="microposts">
+          <%= render @microposts %>
+        </ol>
+        <%= will_paginate @microposts %>
+    <% end %>
+  </div>
+  
 </div>
