--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,3 @@
-
 <% provide(:title, @user.name) %>
 <div class="row">
   <aside class="span4">
@@ -7,16 +6,13 @@
         <%= gravatar_for @user %>
         <%= @user.name %>
       </h1>
-
-      <span><%= pluralize(@user.microposts.count, "micropost") %></span>
-
-
     </section>
-
-
-
+    <section>
+      <%= render 'shared/stats' %>
+    </section>
   </aside>
   <div class="span8">
+    <%= render 'follow_form' if signed_in? %>
     <% if @user.microposts.any? %>
     <h3>Microposts (<%= @user.microposts.count %>)</h3>
         <ol class="microposts">
